--- a/app/assets/lang/en_US.toml
+++ b/app/assets/lang/en_US.toml
@@ -127,7 +127,7 @@ updateReleaseNotes = "Update Release Notes"
 waitingText = "Waiting for Microsoft.."
 
 [ejs.welcome]
-continueButton = "CONTINUE"
+continueButton = "Continuer"
 
 
 [js.discord]
