--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -7,7 +7,7 @@ title = "Dalthian Launcher"
 mediaGitHubURL = "https://github.com/Thermidoren/DalthianLauncher"
 mediaTwitterURL = "#"
 mediaInstagramURL = "#"
-mediaYouTubeURL = "#"
+mediaYouTubeURL = "https://www.youtube.com/@dalthianrp"
 mediaDiscordURL = "https://discord.gg/dalthian"
 
 [ejs.settings]
