Modification d'un fichier texte

--- a/app/assets/lang/en_US.toml
+++ b/app/assets/lang/en_US.toml
@@ -5,7 +5,7 @@ usernameEditButton = "Édité"
 settingsTooltip = "Options"
 serverStatus = "Serveur"
 serverStatusPlaceholder = "Hors ligne"
-mojangStatus = "MOJANG STATUS"
+mojangStatus = "Statut des serveurs Mojang"
 mojangStatusTooltipTitle = "Services"
 mojangStatusNETitle = "Non&nbsp;Essential"
 newsButton = "News"
