--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -7,14 +7,14 @@ title = "Dalthian Launcher"
 mediaGitHubURL = "https://github.com/Thermidoren/DalthianLauncher"
 mediaTwitterURL = "#"
 mediaInstagramURL = "#"
-mediaYouTubeURL = "https://www.youtube.com/@dalthianrp"
-mediaDiscordURL = "https://discord.gg/dalthian"
+mediaYouTubeURL = "#"
+mediaDiscordURL = "#"
 
 [ejs.settings]
 sourceGithubLink = "https://github.com/dscalZi/HeliosLauncher"
 supportLink = "https://github.com/dscalZi/HeliosLauncher/issues"
 
 [ejs.welcome]
-welcomeHeader = "Bienvenue sur le launcher de DalthianRP!"
-welcomeDescription = "Vous voici aux portes d'un vaste monde de roleplay médiéval Dark Fantasy!"
-welcomeDescCTA = "Encore un peu de patience, vous foulerez bientôt ces terres de vos pieds."
+welcomeHeader = "Bienvenue sur le launcher de N.O.E.!"
+welcomeDescription = "C'est votre dernière sauvegarde!"
+welcomeDescCTA = "Initialisation des données de la simulation."
