--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -1,7 +1,7 @@
 # Custom Language File for Launcher Customizer
 
 [ejs.app]
-title = "Lyterra Launcher"
+title = "Dalthian Launcher"
 
 [ejs.landing]
 mediaGitHubURL = "https://github.com/Thermidoren/DalthianLauncher"
@@ -15,6 +15,6 @@ sourceGithubLink = "https://github.com/dscalZi/HeliosLauncher"
 supportLink = "https://github.com/dscalZi/HeliosLauncher/issues"
 
 [ejs.welcome]
-welcomeHeader = "Bienvenue sur le launcher de Lyterra!"
-welcomeDescription = "Vous vous apprêtez à fouler la terre des dieux..."
-welcomeDescCTA = "Que la meilleure colonie l'emporte."
+welcomeHeader = "Bienvenue sur le launcher de DalthianV2!"
+welcomeDescription = "La fin du voyage."
+welcomeDescCTA = "Le dernier chapitre de l'histoire du monde."
